Fixing Arrow Spacing

--- a/blocks/faq/faq.css
+++ b/blocks/faq/faq.css
@@ -23,6 +23,7 @@ main .faq .faq-question {
     transition: all .25s ease-in-out;
     cursor: pointer;
     position: relative;
+    width: 95%;
 }
 
 main .faq .faq-question:hover {
